--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
     <h2>Inscrivez-vous maintenant</h2>
     <p>Formation 100% en ligne, accessible à votre rythme, avec accompagnement d'experts et certification reconnue.</p>
     <a href="#" class="cta-button">Je m'inscris maintenant</a>
+<button onclick="window.location.href='https://google.com';" class="cta-button">
+  Je m'inscris maintenant
+</button>
+
   </section>
 
   <footer>
