--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
     <a href="#" class="cta-button">Je m'inscris maintenant</a>
 <button onclick="window.location.href='https://google.com';" class="cta-button">
   Je m'inscris maintenant
+<a href="https://buy.stripe.com/test_abc123XYZ" class="cta-button">Je m'inscris maintenant</a>
+
 </button>
 
   </section>
