--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Formation Expert en Rénovation de Bâtiments</title>
+  <title>Devenez Expert en Rénovation Énergétique des Bâtiments</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * { box-sizing: border-box; }
     body {
       margin: 0;
       font-family: 'Montserrat', sans-serif;
-      background-color: #f5f5f5;
+      background-color: #f4f4f4;
       color: #333;
+      line-height: 1.6;
     }
     header {
       background: linear-gradient(90deg, #004d40, #00796b);
@@ -20,42 +20,44 @@
       padding: 60px 20px;
       text-align: center;
     }
-    header h1 { font-size: 2.5em; margin-bottom: 10px; }
-    header p { font-size: 1.2em; margin-bottom: 30px; }
-    .cta-button {
+    header h1 {
+      font-size: 2.8em;
+      margin-bottom: 15px;
+    }
+    header p {
+      font-size: 1.2em;
+      max-width: 800px;
+      margin: auto;
+    }
+    .container {
+      max-width: 1000px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+    h2 {
+      color: #00695c;
+      border-left: 5px solid #00796b;
+      padding-left: 10px;
+      margin-top: 50px;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    li {
+      margin-bottom: 10px;
+    }
+    a.cta-button {
+      display: inline-block;
+      margin-top: 30px;
       background-color: #ff9800;
       color: #fff;
       padding: 15px 30px;
       font-size: 1.1em;
-      border: none;
       border-radius: 8px;
-      cursor: pointer;
       text-decoration: none;
     }
-    .cta-button:hover { background-color: #fb8c00; }
-    .section {
-      max-width: 1000px;
-      margin: 60px auto;
-      padding: 0 20px;
-    }
-    .section h2 {
-      font-size: 2em;
-      margin-bottom: 20px;
-      color: #00796b;
-    }
-    .section p { font-size: 1.1em; line-height: 1.6; }
-    .features {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      margin-top: 30px;
-    }
-    .feature {
-      flex: 1 1 300px;
-      background: #ffffff;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    a.cta-button:hover {
+      background-color: #fb8c00;
     }
     footer {
       background-color: #004d40;
@@ -68,46 +70,70 @@
 </head>
 <body>
 
-  <header>
-    <h1>Devenez Expert en Rénovation de Bâtiments</h1>
-    <p>Maîtrisez les compétences clés pour transformer des bâtiments anciens en habitations modernes, durables et conformes aux normes actuelles.</p>
-    <a href="#inscription" class="cta-button">Rejoindre la Formation</a>
-  </header>
+<header>
+  <h1>Devenez Expert en Rénovation Énergétique des Bâtiments</h1>
+  <p>Formez-vous aux compétences stratégiques pour réussir la transition énergétique du secteur du bâtiment.</p>
+</header>
 
-  <section class="section">
-    <h2>Pourquoi cette formation ?</h2>
-    <p>Avec la transition énergétique et les nouvelles exigences de performance énergétique, le secteur de la rénovation est en pleine expansion. Cette formation vous permet de devenir un professionnel recherché, capable de diagnostiquer, planifier et piloter des projets de rénovation ambitieux.</p>
+<div class="container">
+
+  <section>
+    <h2>🌟 Objectif de la Formation</h2>
+    <ul>
+      <li>Évaluer et améliorer la performance énergétique des bâtiments existants.</li>
+      <li>Concevoir des solutions techniques durables.</li>
+      <li>Maîtriser les réglementations thermiques et certifications environnementales.</li>
+      <li>Piloter des projets de rénovation avec efficacité.</li>
+    </ul>
   </section>
 
-  <section class="section">
-    <h2>Ce que vous allez apprendre</h2>
-    <div class="features">
-      <div class="feature">
-        <h3>📐 Diagnostic & Audit</h3>
-        <p>Apprenez à réaliser des audits énergétiques et à identifier les points critiques d’un bâtiment ancien.</p>
-      </div>
-      <div class="feature">
-        <h3>🏗 Techniques de Rénovation</h3>
-        <p>Isolation, étanchéité, ventilation, systèmes de chauffage modernes et écoresponsables.</p>
-      </div>
-      <div class="feature">
-        <h3>📊 Pilotage & Budget</h3>
-        <p>Planification de chantier, suivi de l’avancement, maîtrise des coûts et relations avec les clients.</p>
-      </div>
-    </div>
+  <section>
+    <h2>📚 Programme de la Formation</h2>
+    <ul>
+      <li><strong>Analyse du Bâti Existant</strong>: Audit énergétique, pathologies du bâti, hygrométrie.</li>
+      <li><strong>Systèmes Techniques et Optimisation</strong>: CVC, ENR, gestion technique.</li>
+      <li><strong>Approches Économiques & Environnementales</strong>: ACV, impact social, évaluation économique.</li>
+      <li><strong>Management de Projet</strong>: BIM, gestion d'équipe, thèse professionnelle.</li>
+    </ul>
   </section>
 
-  <section class="section" id="inscription">
-    <h2>Inscrivez-vous maintenant</h2>
-    <p>Formation 100% en ligne, accessible à votre rythme, avec accompagnement d'experts et certification reconnue.</p>
-<a href="https://buy.stripe.com/test_abc123XYZ" class="cta-button">Je m'inscris maintenant</a>
-</button>
-
+  <section>
+    <h2>🎓 Certification et Débouchés</h2>
+    <ul>
+      <li>Certification RNCP Niveau 7 (Bac+5).</li>
+      <li>Insertion professionnelle : 90% dans les 3 mois.</li>
+      <li>Métiers : Ingénieur en énergie, Consultant en rénovation, Chef de projet.</li>
+    </ul>
   </section>
 
-  <footer>
-    <p>&copy; 2025 Formation Rénovation Bâtiment | Tous droits réservés</p>
-  </footer>
+  <section>
+    <h2>⏰ Informations Pratiques</h2>
+    <ul>
+      <li>Durée : 1 an (temps plein ou alternance).</li>
+      <li>Localisation : Saint-Étienne, Lyon, Marseille.</li>
+      <li>Prérequis : Bac+5 ou expérience pro significative.</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>✨ Pourquoi Choisir Cette Formation ?</h2>
+    <ul>
+      <li>Formation accélérée, reconnue dans le secteur du bâtiment durable.</li>
+      <li>Méthodes pédagogiques actives : projets, cas concrets, visites.</li>
+      <li>Encadrement par des experts académiques et professionnels.</li>
+      <li>Accès à un réseau d’anciens et de partenaires industriels.</li>
+    </ul>
+  </section>
+
+  <div style="text-align: center">
+    <a href="https://buy.stripe.com/test_abc123XYZ" class="cta-button">Je m'inscris maintenant</a>
+  </div>
+
+</div>
+
+<footer>
+  <p>&copy; 2025 Formation Rénovation Bâtiment | Tous droits réservés</p>
+</footer>
 
 </body>
 </html>
